--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
   flutter_bloc: ^8.1.4
-  flutter_form_builder: ^9.1.1
+  flutter_form_builder: 9.1.1
   form_builder_validators: ^9.1.0
   flutter_screenutil: ^5.9.0
   firebase_core: ^2.24.2
