--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,8 @@ dependencies:
   navigation_history_observer: ^1.1.0
   rive: ^0.12.4
   iconsax: ^0.0.8
-
+  agora_rtc_engine: ^6.2.6
+  permission_handler: 
 
 dev_dependencies:
   flutter_test:
