--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   navigation_history_observer: ^1.1.0
   rive: ^0.12.4
   iconsax: ^0.0.8
+  equatable: ^2.0.5
 
 
 dev_dependencies:
