--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   permission_handler: 
   equatable: ^2.0.5
   intl: ^0.18.1
+  google_mlkit_pose_detection: ^0.10.0
 
 
 dev_dependencies:
