--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   equatable: ^2.0.5
   intl: ^0.18.1
   google_mlkit_pose_detection: ^0.10.0
+  image_picker: ^1.0.7
 
 
 dev_dependencies:
