feat: pose detection done | H4CK

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   intl: ^0.18.1
   google_mlkit_pose_detection: ^0.10.0
   image_picker: ^1.0.7
+  camera: ^0.10.5+9
 
 
 dev_dependencies:
