--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   image_picker: ^1.0.7
   camera: ^0.10.5+9
   flutter_expandable_fab: ^2.0.0
+  firebase_messaging: ^14.7.10
+  flutter_local_notifications: ^16.3.2
+  http: ^1.1.0
 
 
 dev_dependencies:
