--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   firebase_messaging: ^14.7.10
   flutter_local_notifications: ^16.3.2
   http: ^1.1.0
+  geolocator: ^8.2.0
 
 
 dev_dependencies:
